--- a/App-engine/.env
+++ b/App-engine/.env
@@ -1,9 +1,9 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_VALHALLA_URL=https://valhalla1.openstreetmap.de
-REACT_APP_NOMINATIM_URL=https://nominatim.openstreetmap.org
-REACT_APP_TILE_SERVER_URL="https://tile.openstreetmap.org/{z}/{x}/{y}.png"
-REACT_APP_CENTER_COORDS="77.244530,28.560803"
+REACT_APP_VALHALLA_URL=http://34.131.81.195:8002/
+REACT_APP_NOMINATIM_URL=http://34.131.81.195:8080/nominatim
+REACT_APP_TILE_SERVER_URL="http://34.131.81.195:8080/styles/basic-preview/512/{z}/{x}/{y}.png"
+REACT_APP_CENTER_COORDS="28.63284,77.21966"
 
 # uncomment this variable to set boundaries on the leaflet map
 #                       southwest corner, northeast corner
-REACT_APP_MAX_BOUNDS="77 29 77 29"
+REACT_APP_MAX_BOUNDS="-90,-1e7,90,1e7"
