--- a/App-engine/.env
+++ b/App-engine/.env
@@ -1,7 +1,7 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_VALHALLA_URL=http://34.131.81.195:8002/
-REACT_APP_NOMINATIM_URL=http://34.131.81.195:8080/nominatim
-REACT_APP_TILE_SERVER_URL="http://34.131.81.195:8080/styles/basic-preview/512/{z}/{x}/{y}.png"
+REACT_APP_VALHALLA_URL=https://valhalla.openmaps.live/
+REACT_APP_NOMINATIM_URL=https://tiles.openmaps.live/nominatim
+REACT_APP_TILE_SERVER_URL="https://tiles.openmaps.live/styles/basic-preview/512/{z}/{x}/{y}.png"
 REACT_APP_CENTER_COORDS="28.63284,77.21966"
 
 # uncomment this variable to set boundaries on the leaflet map
